--- a/assignment7.html
+++ b/assignment7.html
@@ -9,15 +9,15 @@
     display: flex;
     gap: 20px;
     padding: 50px;
-    background: #f4f4f4;
+    background: #0b0b0b;
   }
 
   .card {
-    background: white;
+    background: rgb(27, 239, 221);
     border-radius: 12px;
     width: 300px;
     cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px rgba(55, 40, 40, 0.2);
     transition: all 0.3s ease;
     overflow: hidden;
     height: 80px; /* collapsed height */
